--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   desktop_drop: ^0.4.4
+  cross_file: ^0.3.4+1
 
 dev_dependencies:
   flutter_test:
