--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   desktop_drop: ^0.4.4
   cross_file: ^0.3.4+1
+  csv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
