--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   desktop_drop: ^0.4.4
   cross_file: ^0.3.4+1
   csv: ^6.0.0
+  charset: ^2.0.1
 
 dev_dependencies:
   flutter_test:
